--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@ body{font-family: Roboto;}blockquote{border-color: #c01818;}div[submit-success] 
                   
               </amp-img>
           </span>
-          <p class="brand-name mbr-fonts-style mbr-bold display-5">McAfee Total Protection</p>
+          <p class="brand-name mbr-fonts-style mbr-bold display-5">McAfee Total Security</p>
       </div>
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
             
